overview: The window selector item close button is not properly updated.

Test: manual
Bug: 871985
Change-Id: I3747ce934f186acd677252ce22d748f4fe853907
Reviewed-on: https://chromium-review.googlesource.com/1166326
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581902}
Former-commit-id: 71135040b08c3aa42ea549e08ff4ad8bbce1ef4e